[SP] 增加way_article_post文章功能api，加入openapi3，路径/error返回体改造。联调。
